# esp2400

./: README.md
code/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
code/.metadata/: version.ini
code/main/: CMakeLists.txt  app.c  app.h  bundle.c  bundle.h  conf.c  conf.h  def.h  hz.fon  hz.idx  ivc.fon  ivc.idx  ivc2.fon  ivs.fon  ivs.idx  ivs2.fon  ivs3.fon  ivs3.idx  ivs4.fon  listbtm.pic  listtop.pic  main.c  main.h  menu.c  menu.fon  menu.h  menu.idx  menuhz.fon  message.fon  message.idx  output.c  output.h  repl.c  repl.h  samp.c  samp.h  stat.c  stat.h  ui.c  ui.h  (+8 more)
code/main/resource/web/: index.htm
hardware/: _saved_zxd2400change.sch  discharge-cache.lib  discharge.bak  discharge.kicad_pcb  discharge.net  discharge.pro  discharge.sch  esp2400-cache.lib  esp2400-rescue.lib  esp2400.bak  esp2400.csv  esp2400.kicad_pcb  esp2400.kicad_pcb-bak  esp2400.net  esp2400.pro  esp2400.sch  esp2400.xml  fan-cache.lib  fan.bak  fan.kicad_pcb  fan.kicad_pcb-bak  fan.net  fan.pro  fan.sch  fp-info-cache  fp-lib-table  my.lib  sym-lib-table  zxd2400changes.bak
hardware/CNC/: discharge_cut.nc  discharge_drill.nc  esp2400_cut.nc  esp2400_drill.nc  fan_cut.nc  fan_drill.nc  fan_drill_1layer.nc
hardware/all.pretty/: 1.14LCD.kicad_mod  CD54.kicad_mod  CD75.kicad_mod  CP_Elec_5x5.9.kicad_mod  CP_Elec_8x10.5.kicad_mod  C_1206_3216Metric.kicad_mod  C_1210_3225Metric.kicad_mod  (+14 more)
parts/: Mezzanine.FCStd  Mezzanine.FCStd1  Mezzanine.nc  backface.FCStd  backface.FCStd1  backface.nc  face.CWS  face.FCStd  face.FCStd1  face.stl
(+32 files in other folders)
